client/src/styles/home.css
/* import fonts from google fonts */
@import url("https://fonts.googleapis.com/css?family=Anton|Gugi|Lato|Roboto|Sofia&display=swap");

/* header */

header {
  background-color: red;
  font-family: roboto;
}

header .site-title {
  font-family: gugi;
}

.container .dropdown-toggle,
.container .dropdown-item {
  font-size: 0.7em;
}

.header-links a {
  font-size: 0.9em;
  text-decoration: none;
  color: white;
}

#btn-text {
  color: red;
}

/*  Navigation Menu **/

.navbar-nav {
  padding: 0.8em 0em;
}

.navbar-nav .nav-link {
  font-size: 0.9em;
  color: black;
}

.navbar-nav .nav-item .nav-link {
  padding: 0 1.3em;
}

/* Slider one */

.site-slider {
  position: relative;
}

/* Trending Pros */

.homePros {
  width: 200px;
  height: 200px;
  margin-top: 50px;
}
.site-slider-two {
  position: relative;
  height: 30%;
}

.site-slider-two .product {
  height: 25rem;
  position: relative;
  overflow: hidden;
}

.site-slider-two .product img {
  width: 90%;
  margin: auto;
}

.site-btn.btn-span {
  padding: 0.8rem 1.9rem;
  border-radius: 4rem;
  border: 1px solid border;
  background-color: red;
  color: white;
  list-style-type: none;
}

/* Featured */
.container .features {
  padding: 3rem 0;
}

.container .features h1 {
  font-family: gugi;
}

.container .features p {
  padding: 0.5% 25%;
  font-size: 0.9em;
}

.homeProd {
  width: 200px;
  height: 200px;
  padding: 0 16px;
}
/* Sale Video */

.player-wrapper {
  position: relative;
  padding-top: 56.25%; /* 720 / 1280 = 0.5625 */
  margin-left: 10%;
}

.react-player {
  position: absolute;
  top: 0;
}

/* Latest and Greatest */
.latest {
  width: 1440px;
  margin: auto;
}

.nikeZoom {
  width: 80%;
  margin-left: 10%;
}

/* sports logo */

.slick-next:before {
  color: black !important;
}

.slick-prev:before {
  color: black !important;
}

/* Footer */

footer {
  width: 100%;
  margin-top: 100px;
  padding-top: 20px;
  color: white;
  font-size: 20px;
  font-family: gugi;
  background-color: red;
  text-decoration: none;
}
.list {
  margin: auto;
  display: flex;
  justify-content: space-between;
  list-style-type: none;
}

.rights {
  font-size: 10px;
  text-align: center;
}

a {
  color: white;
}
a:hover {
  color: white;
}

.cartB {
  display: hidden;
}

